syntax = "proto3";

option go_package = "github.com/nileshnk/media_upload_poc/user_management";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GenerateAccessToken(GenerateAccessTokenRequest) returns (GenerateAccessTokenResponse);
  rpc GenerateAccessTokenWithRefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
}

message RegisterResponse {
    string success = 1;
    string message = 2;
}

message GenerateAccessTokenRequest {
    string user_id = 1;
}

message GenerateAccessTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}